--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,8 +1,10 @@
 @import url(../../style/fonts.css);
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;700;800&display=swap");
 html {
   font-size: 1rem;
   color: #2b2b2b;
   font-family: "Roboto", sans-serif;
+  background-color: black;
 }
 
 .popup-info {
@@ -53,7 +55,7 @@ html {
   max-width: 1280px;
   height: 100%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -67,12 +69,14 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #f9f9f9;
+  gap: 40px;
+  background-color: black;
+  background-image: url(../../assets/images/bg.jpg);
 }
 
 .header {
   width: 100%;
-  height: 200px;
+  height: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,31 +87,27 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1fr 4fr;
-      -ms-flex-positive: 1fr 4fr;
-          flex-grow: 1fr 4fr;
-  background-color: #d8d7d7;
-}
-
-.img-header {
-  width: 300px;
-  height: 100%;
-  background-image: url(../../assets/images/oldLibrary.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
+  background-color: #585858;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 1px solid #848480;
 }
 
 .heading {
-  width: calc(100% - 300px);
+  width: 100%;
   height: auto;
-  font-family: "Macondo", sans-serif;
+  font-family: "Roboto Slab", serif;
   text-align: center;
-  color: darkgoldenrod;
+  color: white;
 }
 
 .main {
   width: 100%;
   height: 100%;
+  background-color: #585858;
+  margin: 0 auto;
+  border: 1px solid #848480;
+  border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,14 +116,16 @@ html {
       -ms-flex-direction: row;
           flex-direction: row;
   background-color: grey;
-  gap: 40px;
 }
 
 .catalog {
   width: 50%;
   height: 100%;
   padding: 20px;
-  background: lightblue;
+  background: #2b2b2b;
+  border-radius: 10px 0 0 10px;
+  border-right: 1px solid #404040;
+  color: #e0dfdc;
 }
 
 .books-list {
@@ -134,14 +136,17 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 30px;
 }
 
 .book-item {
+  border-top: 1px solid #404040;
+  padding: 20px 0;
+  border-bottom: 1px solid #111;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+  color: #e0dfdc;
 }
 
 .book-item .card-item-img {
@@ -150,6 +155,8 @@ html {
 }
 
 .book-item .btn-more-info {
+  color: #a8a8a8;
+  font-style: italic;
   cursor: pointer;
 }
 
@@ -187,8 +194,8 @@ html {
           user-select: none;
   -ms-touch-action: manipulation;
       touch-action: manipulation;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .book-item .btn-add:focus {
@@ -198,7 +205,7 @@ html {
 .book-item .btn-add:after {
   content: "";
   position: absolute;
-  border: 1px solid #000000;
+  border: 1px solid #FFF;
   bottom: 4px;
   left: 4px;
   width: calc(100% - 1px);
@@ -234,13 +241,70 @@ html {
 
 .basket {
   width: 50%;
-  height: 100%;
   padding: 20px;
-  background: lightpink;
+  background: #585858;
+  border-left: 1px solid #111;
+  border-radius: 0 10px 10px 0;
+  color: #e0dfdc;
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
 }
 
 .bookItem {
   background-color: aqua;
+}
+
+.btn-confirm {
+  background-color: #FFFFFF;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 13px 23px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  transition: box-shadow .2s,-webkit-transform .1s,transform .1s;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+
+.btn-confirm:focus-visible {
+  -webkit-box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+          box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  -webkit-transition: -webkit-box-shadow .2s;
+  transition: -webkit-box-shadow .2s;
+  transition: box-shadow .2s;
+  transition: box-shadow .2s, -webkit-box-shadow .2s;
+}
+
+.btn-confirm:active {
+  background-color: #F7F7F7;
+  border-color: #000000;
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
+
+.btn-confirm:disabled {
+  border-color: #DDDDDD;
+  color: #DDDDDD;
+  cursor: not-allowed;
+  opacity: 1;
 }
 
 .btn-close {
@@ -248,8 +312,8 @@ html {
   float: right;
   font-size: 28px;
   font-weight: bold;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .btn-close:hover,
@@ -257,6 +321,12 @@ html {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.basket-title {
+  margin: 0;
+  padding: 20px 0;
+  border-bottom: 1px solid #3f413f;
 }
 
 .order-list {
@@ -267,10 +337,12 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 30px;
 }
 
 .order-list .order-item {
+  padding: 20px 0;
+  border-top: 1px solid #848480;
+  border-bottom: 1px solid #3f413f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
