--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -1,12 +1,18 @@
 @import url(../../style/fonts.css);
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;700;800&display=swap");
 
 $font-size: 1rem;
 $font-color: rgb(43, 43, 43);
+$color: #585858;
+$color-dark: #2b2b2b;
+$color-font-light: #e0dfdc;
+$color-font: #a8a8a8;
 
 html {
   font-size: $font-size;
   color: $font-color;
   font-family: "Roboto", sans-serif;
+  background-color: black;
 }
 
 .popup-info {
@@ -25,22 +31,22 @@ html {
   background-color: #fff;
   overflow: auto;
   z-index: 1;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 
-  .popup-wrapper {  
-      position: relative;
-      max-width: 500px;
-      height: auto;
-      padding: 10px;
-      border-radius: 10px;
-      background-color: #fefefe;
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-      animation-name: animation-top;
-      animation-duration: 0.4s;
+  .popup-wrapper {
+    position: relative;
+    max-width: 500px;
+    height: auto;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #fefefe;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    animation-name: animation-top;
+    animation-duration: 0.4s;
   }
 
   .popup-text {
-      padding: 40px;
+    padding: 40px;
   }
 }
 
@@ -48,131 +54,150 @@ html {
   max-width: 1280px;
   height: 100%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(249, 249, 249);
+  gap: 40px;
+  background-color: black;
+  background-image: url(../../assets/images/bg.jpg);
 }
 
 .header {
   width: 100%;
-  height: 200px;
+  height: 120px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  flex-grow: 1fr 4fr;
-  background-color: rgb(216, 215, 215);
+  // flex-grow: 1fr 4fr;
+  background-color: $color;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 1px solid #848480;
 }
 
-
-.img-header {
-  width: 300px;
-  height: 100%;
-  background-image: url(../../assets/images/oldLibrary.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
+// .img-header {
+//   width: 300px;
+//   height: 100%;
+//   background-image: url(../../assets/images/oldLibrary.jpg);
+//   background-repeat: no-repeat;
+//   background-size: contain;
+// }
 
 .heading {
-  width: calc(100% - 300px);
+  // width: calc(100% - 300px);
+  width: 100%;
   height: auto;
-  font-family: "Macondo", sans-serif;
+  font-family: "Roboto Slab", serif;
+  // font-family: "Roboto", sans-serif;
   text-align: center;
-  color: darkgoldenrod;
+  // color: darkgoldenrod;
+  color: white;
 }
 
 .main {
   width: 100%;
   height: 100%;
+  background-color: $color;
+  margin: 0 auto;
+  border: 1px solid #848480;
+  border-radius: 10px;
   display: flex;
   flex-direction: row;
   background-color: grey;
-  gap: 40px;
+  // gap: 40px;
 }
-
 
 .catalog {
   width: 50%;
   height: 100%;
   padding: 20px;
-  background: lightblue;
+  background: $color-dark;
+  border-radius: 10px 0 0 10px;
+  border-right: 1px solid #404040;
+  color: $color-font-light;
 }
 
 .books-list {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  
 }
 
 .book-item {
+  border-top: 1px solid #404040;
+  padding: 20px 0;
+  border-bottom: 1px solid #111;
   display: flex;
   gap: 20px;
+  color: $color-font-light;
 
   .card-item-img {
-      width: 185px;
-      height: auto;
+    width: 185px;
+    height: auto;
   }
 
   .btn-more-info {
-      cursor: pointer;
+    color: $color-font;
+    font-style: italic;
+    cursor: pointer;
   }
 
   .btn-add {
-      width: 140px;
-      background-color: #3dd1e7;
-      border: 0 solid #e5e7eb;
-      box-sizing: border-box;
-      color: #000000;
-      display: flex;
-      font-family: "Roboto", sans-serif;
-      font-size: 1rem;
-      font-weight: 700;
-      justify-content: center;
-      line-height: 1.75rem;
-      padding: 0.75rem 1.65rem;
-      position: relative;
-      text-align: center;
-      text-decoration: none #000000 solid;
-      text-decoration-thickness: auto;
-      max-width: 140px;
-      position: relative;
-      cursor: pointer;
-      transform: rotate(-2deg);
-      user-select: none;
-      touch-action: manipulation;
-      transition: .3s;
+    width: 140px;
+    background-color: #3dd1e7;
+    border: 0 solid #e5e7eb;
+    box-sizing: border-box;
+    color: #000000;
+    display: flex;
+    font-family: "Roboto", sans-serif;
+    font-size: 1rem;
+    font-weight: 700;
+    justify-content: center;
+    line-height: 1.75rem;
+    padding: 0.75rem 1.65rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none #000000 solid;
+    text-decoration-thickness: auto;
+    max-width: 140px;
+    position: relative;
+    cursor: pointer;
+    transform: rotate(-2deg);
+    user-select: none;
+    touch-action: manipulation;
+    transition: 0.3s;
   }
 
   .btn-add:focus {
-      outline: 0;
+    outline: 0;
   }
 
   .btn-add:after {
-      content: "";
-      position: absolute;
-      border: 1px solid #000000;
-      bottom: 4px;
-      left: 4px;
-      width: calc(100% - 1px);
-      height: calc(100% - 1px);
+    content: "";
+    position: absolute;
+    border: 1px solid #FFF;
+    bottom: 4px;
+    left: 4px;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
   }
 
   .btn-add:hover:after {
-      bottom: 2px;
-      left: 2px;
+    bottom: 2px;
+    left: 2px;
   }
 
   .btn-add:active {
-      background-color: #21aec4;
+    background-color: #21aec4;
   }
 
   @media (min-width: 768px) {
-      .button-53 {
-          padding: 0.75rem 3rem;
-          font-size: 1.25rem;
-      }
+    .button-53 {
+      padding: 0.75rem 3rem;
+      font-size: 1.25rem;
+    }
   }
 }
 
@@ -184,13 +209,60 @@ html {
 
 .basket {
   width: 50%;
-  height: 100%;
   padding: 20px;
-  background: lightpink;
+  background: $color;
+  border-left: 1px solid #111;;
+  border-radius: 0 10px 10px 0;
+  color: $color-font-light;
+  align-self: stretch;
+
 }
 
 .bookItem {
   background-color: aqua;
+}
+
+.btn-confirm {
+  background-color: #FFFFFF;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 13px 23px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+
+.btn-confirm:focus-visible {
+  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  transition: box-shadow .2s;
+}
+
+.btn-confirm:active {
+  background-color: #F7F7F7;
+  border-color: #000000;
+  transform: scale(.95);
+}
+
+.btn-confirm:disabled {
+  border-color: #DDDDDD;
+  color: #DDDDDD;
+  cursor: not-allowed;
+  opacity: 1;
 }
 
 .btn-close {
@@ -198,7 +270,7 @@ html {
   float: right;
   font-size: 28px;
   font-weight: bold;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .btn-close:hover,
@@ -208,38 +280,52 @@ html {
   cursor: pointer;
 }
 
+.basket-title {
+  margin: 0;
+  padding: 20px 0;
+  border-bottom: 1px solid #3f413f;
+}
+
 .order-list {
   display: flex;
   flex-direction: column;
-  gap: 30px;
 
   .order-item {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
+    padding: 20px 0;
+    border-top: 1px solid #848480;
+    border-bottom: 1px solid #3f413f;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 
-      .book-price-invisible {
-          display: none;
-      }
+    .book-price-invisible {
+      display: none;
+    }
 
-      .order-item-img {
-          width: 185px;
-          height: auto;
-      }
-      
-      .order-item-content {
-          width: 60%;
-      }
+    .order-item-img {
+      width: 185px;
+      height: auto;
+    }
+
+    .order-item-content {
+      width: 60%;
+    }
   }
 
   .btn-close {
-      position: relative;
-      top: -100px;
-      right: 0;
+    position: relative;
+    top: -100px;
+    right: 0;
   }
 }
 
 @keyframes animation-top {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
