--- a/pages/form/style.css
+++ b/pages/form/style.css
@@ -21,13 +21,17 @@ input:focus {
   background-color: white;
 }
 
+input:required:valid {
+  background-color: #aae6aa;
+}
+
 input[date] {
   color: yellow;
 }
 
 .container {
   width: 100%;
-  height: 100vh;
+  padding: 40px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,6 +85,28 @@ input[date] {
   gap: 15px;
 }
 
+.name .name-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 40px;
+}
+
+.adress-number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 40px;
+}
+
 .box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -94,6 +120,12 @@ input[date] {
 .box label {
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+.btn-block {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .btn-confirm {
