--- a/pages/form/style.scss
+++ b/pages/form/style.scss
@@ -30,13 +30,21 @@ input:focus {
   background-color: white;
 }
 
+input:required:valid {
+  background-color: rgb(170, 230, 170);
+}
+
+// input:invalid {
+//   background-color: rgb(232, 125, 125);
+// }
+
 input[date] {
   color: yellow;
 }
 
 .container {
   width: 100%;
-  height: 100vh;
+  padding: 40px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,6 +76,21 @@ input[date] {
   flex-direction: column;
   gap: 15px;
 }
+
+.name {
+
+  .name-container{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
+}
+
+.adress-number {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
 .box {
   display: flex;
   flex-direction: column;
@@ -78,6 +101,9 @@ input[date] {
   }
 }
 
+.btn-block {
+  align-self: center;
+}
 
 .btn-confirm {
   background-color: #FFFFFF;
