--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -240,6 +240,9 @@ html {
 }
 
 .basket {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
   width: 50%;
   padding: 20px;
   background: #585858;
@@ -249,6 +252,20 @@ html {
   -ms-flex-item-align: stretch;
       -ms-grid-row-align: stretch;
       align-self: stretch;
+}
+
+.basket-title {
+  top: 0;
+}
+
+.order-list {
+  top: 50px;
+}
+
+.confirmation {
+  top: 100px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #3f413f;
 }
 
 .bookItem {
@@ -330,6 +347,7 @@ html {
 }
 
 .order-list {
+  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -337,6 +355,7 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  border-bottom: 1px solid #3f413f;
 }
 
 .order-list .order-item {
