--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -208,6 +208,8 @@ html {
 }
 
 .basket {
+  position: sticky;
+  top: 0px;
   width: 50%;
   padding: 20px;
   background: $color;
@@ -217,6 +219,27 @@ html {
   align-self: stretch;
 
 }
+
+// .basket-title,
+// .order-list,
+// .confirmation {
+//   position: sticky;
+// }
+
+.basket-title {
+  top: 0;
+}
+
+.order-list {
+  top: 50px;
+}
+
+.confirmation {
+  top: 100px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #3f413f;
+}
+
 
 .bookItem {
   background-color: aqua;
@@ -287,8 +310,10 @@ html {
 }
 
 .order-list {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
+  border-bottom: 1px solid #3f413f;
 
   .order-item {
     padding: 20px 0;
